--- a/src/app/modules/homepage-v2/homepage-v2.component.scss
+++ b/src/app/modules/homepage-v2/homepage-v2.component.scss
@@ -234,6 +234,10 @@ m-homepage__v2 {
               overflow: visible;
             }
 
+            .m-registerForm__confirmPassword {
+              margin-top: 19px;
+            }
+
             input:not([type='checkbox']) {
               padding: 10px 15px;
               height: 37px;
